<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.jcu.plandoll16.homework6.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minEditText"
            android:layout_weight="1"
            android:numeric="integer"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxEditText"
            android:layout_weight="1"
            android:inputType="number"
            android:numeric="integer"
            android:singleLine="true"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/generateButton"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:onClick="generateNumbers" />

    <Space
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_below="@id/generateButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/space2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space2"
        android:text="@string/textDisplay"
        android:layout_centerHorizontal="true"
        android:id="@+id/textDisplayButton"
        android:onClick="textDisplayButtonClick" />

    <Space
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/space3"
        android:layout_below="@id/textDisplayButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphicDisplay"
        android:id="@+id/graphicDisplayButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/space3"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/graphicDisplayButton"
        android:layout_centerHorizontal="true">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberListView"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"/>

    </LinearLayout>
</RelativeLayout>
